Added ability to charge payment. Issue #168

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jun 27 16:48:19 PDT 2011
+#Tue Jun 28 02:53:39 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -111,13 +111,17 @@ admin.option.showall=All
 admin.optionGroup.reorder=Reorder Option Groups
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.order=Order Manager
+admin.order.account.isguestaccount=Guest Account
 admin.order.applyOrderActions=Apply Actions
 admin.order.applyOrderActions_confirm=Confirm that you want to apply these actions.
 admin.order.applyOrderActions_success=Order actions applied.
 admin.order.cancelorder=Cancel Order
 admin.order.cancelorder_confirm=Are you sure you want to cancel this order?
 admin.order.cancelorder_success=Order canceled
+admin.order.chargeOrderPayment_error=Errors were encountered while charging the payment.
+admin.order.chargeOrderPayment_success=Payment charged successfully.
 admin.order.chargeorderpayment=Charge Payment
+admin.order.chargeorderpayment_notexists=No record of that payment was found.
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
 admin.order.detail.noorderdeliveries=No deliveries exist yet for this order.
@@ -141,6 +145,7 @@ admin.order.processorderfulfillment_success=Order fulfillment processed.
 admin.order.refundorder=Refund Order
 admin.order.refundorder_confirm=Are you sure you want to refund this order?
 admin.order.refundorder_success=Order refunded
+admin.order.refundorderpayment=Refund Payment
 admin.order.search=Search
 admin.orderfulfillment.process=Process Fulfillment
 admin.product=Product Manager
@@ -505,6 +510,7 @@ entity.orderitem.quantity=Quantity Ordered
 entity.orderitem.stock=stock
 entity.orderitem.taxAmount=taxAmount
 entity.orderpayment.amount=Amount
+entity.orderpayment.amountrefunded=Amount Refunded
 entity.orderpayment.order=Order
 entity.orderpayment.orderPaymentID=Order Payment ID
 entity.orderpayment.paymentMethod=Payment Method
