Refund order payment implemented as 'credit' transaction on credit card (Issue #168)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 28 02:53:39 EDT 2011
+#Tue Jun 28 09:56:10 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -121,7 +121,6 @@ admin.order.cancelorder_success=Order canceled
 admin.order.chargeOrderPayment_error=Errors were encountered while charging the payment.
 admin.order.chargeOrderPayment_success=Payment charged successfully.
 admin.order.chargeorderpayment=Charge Payment
-admin.order.chargeorderpayment_notexists=No record of that payment was found.
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
 admin.order.detail.noorderdeliveries=No deliveries exist yet for this order.
@@ -135,10 +134,13 @@ admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
 admin.order.detailorderfulfillment=Order Fulfillment Details
+admin.order.enterPaymentRefundAmount=Enter an amount to refund up to the amount that has been charged on this payment
 admin.order.list=View All Orders
 admin.order.list.actions=Actions
 admin.order.list.showAdvancedSearch=Advanced Search
 admin.order.listorderfulfillments=Order Fulfillments List
+admin.order.orderpayment_notexists=No record of that payment was found.
+admin.order.processOrderPaymentRefund=Process Refund
 admin.order.processorderfulfillment=Process Order Fulfillment
 admin.order.processorderfulfillment_nav=Process
 admin.order.processorderfulfillment_success=Order fulfillment processed.
@@ -146,6 +148,9 @@ admin.order.refundorder=Refund Order
 admin.order.refundorder_confirm=Are you sure you want to refund this order?
 admin.order.refundorder_success=Order refunded
 admin.order.refundorderpayment=Refund Payment
+admin.order.refundorderpayment_error=Errors where encountered while attempting to process the refund.
+admin.order.refundorderpayment_invalidAmount=The amount for refund must be an amount greater than 0 up to the amount that has been charged on the payment\: {amountCharged}.
+admin.order.refundorderpayment_success=Payment refund processed
 admin.order.search=Search
 admin.orderfulfillment.process=Process Fulfillment
 admin.product=Product Manager
