Fixed Order Detail issue when using Rate Table (Issue #191)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 28 09:56:10 EDT 2011
+#Tue Jun 28 15:15:24 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -130,6 +130,7 @@ admin.order.detail.payments=Payments
 admin.order.detail.priceextended=Price Extended
 admin.order.detail.quantityshipped=Quantity Shipped
 admin.order.detail.shipments=Shipments
+admin.order.detail.shippingProvider.ratetable=Rate Table
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
