Finished tax calculation for issue #139

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 28 15:15:24 EDT 2011
+#Tue Jun 28 16:02:20 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -719,6 +719,8 @@ entity.stockadjustmentitem.stock=stock
 entity.stockadjustmentitem.stockAdjustment=stockAdjustment
 entity.stockadjustmentitem.stockAdjustmentItemID=stockAdjustmentItemID
 entity.taxCategory.taxCategoryName=Category Name
+entity.taxCategoryRate.addressZone=Address Zone
+entity.taxCategoryRate.taxRate=Tax Rate (example use .0875 for 8.75%)
 entity.type.childTypes=childTypes
 entity.type.parentType=parentType
 entity.type.systemCode=systemCode
