--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 28 16:02:20 PDT 2011
+#Wed Jun 29 13:36:53 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -138,6 +138,7 @@ admin.order.detailorderfulfillment=Order Fulfillment Details
 admin.order.enterPaymentRefundAmount=Enter an amount to refund up to the amount that has been charged on this payment
 admin.order.list=View All Orders
 admin.order.list.actions=Actions
+admin.order.list.searchresultsfound=Search Results Found
 admin.order.list.showAdvancedSearch=Advanced Search
 admin.order.listorderfulfillments=Order Fulfillments List
 admin.order.orderpayment_notexists=No record of that payment was found.
@@ -229,6 +230,7 @@ admin.product.uploadSkuImage=Upload Image
 admin.product.uploadSkuImage_error=An error ocurred uploading the image or it was not a valid image file (jpg, png, or gif).
 admin.product.uploadSkuImage_success=The image was successfully uploaded.
 admin.productType.settingDefinedIn=Defined In
+admin.search.cleardates=Clear Dates
 admin.selectBox.select=Select
 admin.setting=Settings Manager
 admin.setting.createaddresszone=Create Address Zone
@@ -321,6 +323,7 @@ define.no=No
 define.notapplicable=N/A
 define.save=Save
 define.select=Select
+define.selectall=Select All
 define.yes=Yes
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
