--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Jun 29 13:36:53 EDT 2011
+#Wed Jun 29 12:03:01 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -723,7 +723,7 @@ entity.stockadjustmentitem.stockAdjustment=stockAdjustment
 entity.stockadjustmentitem.stockAdjustmentItemID=stockAdjustmentItemID
 entity.taxCategory.taxCategoryName=Category Name
 entity.taxCategoryRate.addressZone=Address Zone
-entity.taxCategoryRate.taxRate=Tax Rate (example use .0875 for 8.75%)
+entity.taxCategoryRate.taxRate=Tax Rate (example use 8.75 for 8.75%)
 entity.type.childTypes=childTypes
 entity.type.parentType=parentType
 entity.type.systemCode=systemCode
