fix for issue #208

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Jun 29 14:48:58 EDT 2011
+#Thu Jun 30 08:31:27 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -660,12 +660,12 @@ entity.shippingmethod.shippingMethodName=Shipping Method Name
 entity.shippingmethod.shippingMethodType=Shipping Method Type
 entity.shippingmethod.shippingProviderMethod=Shipping Provider Method
 entity.shippingmethod.shippingprovider=Shipping Provider
-entity.shippingrate.cost=Cost
 entity.shippingrate.maxPrice=Max Price
 entity.shippingrate.maxWeight=maxWeight
 entity.shippingrate.minPrice=minPrice
 entity.shippingrate.minWeight=minWeight
 entity.shippingrate.shippingMethod=shippingMethod
+entity.shippingrate.shippingRate=Rate
 entity.shippingrate.shippingRateID=shippingRateID
 entity.shippingrate.shippingZone=shippingZone
 entity.sku.delete_success=The SKU was deleted successfully.
