Order item status updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -517,6 +517,7 @@ entity.orderitem.orderShipment=orderShipment
 entity.orderitem.price=Price
 entity.orderitem.profile=profile
 entity.orderitem.quantity=Quantity Ordered
+entity.orderitem.status=Status
 entity.orderitem.stock=stock
 entity.orderitem.taxAmount=taxAmount
 entity.orderpayment.amount=Amount
