Added basic database logging

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jun 30 08:31:27 PDT 2011
+#Thu Jun 30 13:46:24 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -786,6 +786,8 @@ frontend.checkout.saveshippingaddress=Save & Continue
 frontend.checkout.saveshippingmethod=Save & Continue
 setting=Setting
 setting.account=Account
+setting.advanced.logDatabaseClearAfterDays=Number of days to maintain logs in Database
+setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
 setting.inherit=Inherit
 setting.order=Order
 setting.order.orderPlacedEmailBCC=New Order Placed Email BCC
