Added confirm dialog message to charge payment button.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jun 30 15:24:48 PDT 2011
+#Fri Jul 01 14:40:08 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -118,6 +118,7 @@ admin.order.applyOrderActions_success=Order actions applied.
 admin.order.cancelorder=Cancel Order
 admin.order.cancelorder_confirm=Are you sure you want to cancel this order?
 admin.order.cancelorder_success=Order canceled
+admin.order.chargeOrderPayment_confirm=Are you sure you want to process this payment?
 admin.order.chargeOrderPayment_error=Errors were encountered while charging the payment.
 admin.order.chargeOrderPayment_success=Payment charged successfully.
 admin.order.chargeorderpayment=Charge Payment
