Enabled assignment of proucts to Mura Categories. (Issue #217)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jul 04 08:50:47 EDT 2011
+#Tue Jul 05 13:38:14 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -206,7 +206,10 @@ admin.product.listproducttypes=View Product Types
 admin.product.noProductsDefined=No Products have been entered yet.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
+admin.product.productCategories.categoryPath=Category Path
 admin.product.productCategories.categoryTitle=Category
+admin.product.productCategories.isFeatured=Featured
+admin.product.productCategories.noProductCategoriesAssigned=This product has not been assigned to any Mura categories.
 admin.product.productDetails=Product Details
 admin.product.productPages.noProductPagesAssigned=This product has not been assigned to any product pages.
 admin.product.productPages.pagePath=Path
@@ -819,6 +822,7 @@ setting.product.imageWidthMedium=Medium Image Width
 setting.product.imageWidthSmall=Small Image Width
 setting.product.imageextension=Image Extension
 setting.product.missingimagepath=Missing Image Path
+setting.product.rootProductCategory=Root Product Category
 setting.product.trackInventoryFlag=Track Inventory
 setting.product.urlKey=URL Key
 setting.settings=Settings
