Updates to Shipping Method Setup.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 01 14:40:08 EDT 2011
+#Tue Jul 05 11:46:35 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -244,6 +244,7 @@ admin.setting.dashboard=Settings Manager
 admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Payment Method?
 admin.setting.deletePaymentMethod=Delete Payment Method
 admin.setting.deletePaymentMethod_nav=Delete
+admin.setting.deleteShippingMethod_success=Shiping Method Deleted
 admin.setting.deleteshippingmethod=Delete Shipping Method
 admin.setting.deleteshippingmethod_confirm=Are you sure you want to delete this Shipping Method?
 admin.setting.deleteshippingmethod_nav=Delete
@@ -659,6 +660,7 @@ entity.setting.global=Global Setting
 entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
 entity.setting.settingValue=Setting Value
+entity.shippingMethod.userRateTableFlag=Use Rate Table
 entity.shippingmethod.delete_success=Shipping Method was saved successfully
 entity.shippingmethod.shippingMethodID=Shipping Method ID
 entity.shippingmethod.shippingMethodName=Shipping Method Name
