Added a check to see if the fulfillment is processable before processing. (Issue #220)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jul 05 13:38:14 EDT 2011
+#Tue Jul 05 15:36:50 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -146,6 +146,7 @@ admin.order.list.searchresultsfound=Search Results Found
 admin.order.list.showAdvancedSearch=Advanced Search
 admin.order.listorderfulfillments=Order Fulfillments List
 admin.order.orderpayment_notexists=No record of that payment was found.
+admin.order.processOrderFulfillment.notProcessable=Fulfillment cannot be processed because it has already been processed or it contains no items.
 admin.order.processOrderPaymentRefund=Process Refund
 admin.order.processorderfulfillment=Process Order Fulfillment
 admin.order.processorderfulfillment_nav=Process
