Made adjustments for shipping rates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,4 @@
-#Created by JInto - www.guh-software.de
-#Tue Jul 05 13:38:14 EDT 2011
+admin.order.processOrderFulfillment.notProcessable=Fulfillment cannot be processed because it has already been processed or it contains no items.
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -318,6 +317,7 @@ admin.setting.savefulfillmentmethod_success=Fulfillment Method Saved
 admin.setting.saveshippingmethod=Save Shipping Method
 admin.setting.saveshippingmethod_nav=Save
 admin.setting.saveshippingmethod_success=Shipping Method Saved
+admin.setting.saveshippingmethodrate_nav=Add Rate
 admin.setting.saveshippingservice=Save Shipping Service
 admin.setting.saveshippingservice_nav=Save
 admin.setting.tab.basicsettings=Basic Settings
@@ -670,15 +670,18 @@ entity.shippingmethod.shippingMethodID=Shipping Method ID
 entity.shippingmethod.shippingMethodName=Shipping Method Name
 entity.shippingmethod.shippingMethodType=Shipping Method Type
 entity.shippingmethod.shippingProviderMethod=Shipping Provider Method
+entity.shippingmethod.shippingRateIncreaseDollar=Shipping Rate Increase Dollar
+entity.shippingmethod.shippingRateIncreasePercentage=Shipping Rate Increase Percentage
 entity.shippingmethod.shippingprovider=Shipping Provider
+entity.shippingmethod.useRateTableFlag=Use Rate Table
+entity.shippingrate.addressZone=Address Zone
 entity.shippingrate.maxPrice=Max Price
-entity.shippingrate.maxWeight=maxWeight
-entity.shippingrate.minPrice=minPrice
-entity.shippingrate.minWeight=minWeight
-entity.shippingrate.shippingMethod=shippingMethod
+entity.shippingrate.maxWeight=Max Weight
+entity.shippingrate.minPrice=Min Price
+entity.shippingrate.minWeight=Min Weight
+entity.shippingrate.shippingMethod=Shipping Method
 entity.shippingrate.shippingRate=Rate
-entity.shippingrate.shippingRateID=shippingRateID
-entity.shippingrate.shippingZone=shippingZone
+entity.shippingrate.shippingRateID=Shipping Rate ID
 entity.sku.delete_success=The SKU was deleted successfully.
 entity.sku.delete_validateIsDefault=The SKU cannot be deleted because it is the default SKU for this product.
 entity.sku.delete_validateOrdered=This SKU cannot be deleted because it has been ordered.
