--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jul 05 14:02:19 PDT 2011
+#Thu Jul 07 13:14:50 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -162,7 +162,10 @@ admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
 admin.product=Product Manager
-admin.product.altimages=Alternate Images
+admin.product.alternateImages=Alternate Images
+admin.product.alternateImages.noAlternateImagesExist=No alternate images exisit for this product.
+admin.product.alternateImages.preview=Preview Image
+admin.product.alternateImages.uploadimage=Upload Image
 admin.product.attributes=Custom Attributes
 admin.product.basicinfo=Basic Product Info
 admin.product.categories=Categories
@@ -173,6 +176,10 @@ admin.product.create.next=Next
 admin.product.createProductType_confirm=Adding a subtype here will re-assign any products in the parent to the new subtype. Continue?
 admin.product.createproducttype=Add Product Type
 admin.product.delete=Delete Product
+admin.product.deleteImage_confirm=Are you sure you want to delete this image?
+admin.product.deleteImage_error=An error was encountered when trying to delete the image.
+admin.product.deleteImage_success=Image deleted
+admin.product.deleteSku_success=SKU was deleted
 admin.product.delete_confirm=Are you sure you want to delete this product?
 admin.product.delete_nav=Delete
 admin.product.delete_success=The Product was successfully deleted.
@@ -181,6 +188,7 @@ admin.product.deleteproducttype_confirm=Are you sure you want to delete this pro
 admin.product.deleteproducttype_disabled=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
 admin.product.deleteproducttype_nav=Delete
 admin.product.deleteproducttype_success=The Product Type was sucessfully deleted
+admin.product.deletesku=Delete SKU
 admin.product.deletesku_confirm=Are you sure you want to delete this SKU?
 admin.product.detail=Product Detail
 admin.product.detail.tab.alternateimages=Alternate Images
@@ -238,6 +246,8 @@ admin.product.selectproducttype=Select Product Type
 admin.product.setting.settingSource.notApplicable=N/A
 admin.product.settingDefinedIn=Defined In
 admin.product.showbasicinfo=Show Basic Product Info
+admin.product.uploadAlternateImage=Upload Image
+admin.product.uploadAlternateImage_success=Image was added
 admin.product.uploadSkuImage=Upload Image
 admin.product.uploadSkuImage_error=An error ocurred uploading the image or it was not a valid image file (jpg, png, or gif).
 admin.product.uploadSkuImage_success=The image was successfully uploaded.
@@ -466,6 +476,9 @@ entity.historysku.historySkuID=historySkuID
 entity.historysku.listPrice=listPrice
 entity.historysku.price=price
 entity.historysku.sku=sku
+entity.image.imageDescription=Image Description
+entity.image.imageName=Image Name
+entity.image.imageType=Image Type
 entity.location.locationID=locationID
 entity.location.locationName=locationName
 entity.location.sellStockOnWeb=sellStockOnWeb
@@ -574,6 +587,7 @@ entity.product.allowBackorderFlag=Allow Backorders
 entity.product.allowDropshipFlag=Allow Dropship
 entity.product.allowPreorderFlag=Allow Pre-Orders
 entity.product.allowShippingFlag=Allow Shipping
+entity.product.alternateImage_uploadError=A problem was encountered uploading the alternate image.
 entity.product.brand=Brand
 entity.product.callToOrderFlag=Allow Orders by Phone
 entity.product.createdDateTime=Date Create
@@ -619,6 +633,9 @@ entity.product.trackInventoryFlag=Track Inventory
 entity.product.webQC=webQC
 entity.product.webQEXP=webQEXP
 entity.product.webQOH=webQOH
+entity.productImage.imageDescription=Image Description
+entity.productImage.imageName=Image Name
+entity.productImage.imageType=Image Type
 entity.productType=Product Type
 entity.productTypeDescription=Product Type Description
 entity.productrelationship.product=product
