Frontend account overview page (Issue #222)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 07 13:14:50 EDT 2011
+#Thu Jul 07 19:28:21 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -348,6 +348,7 @@ define.save=Save
 define.select=Select
 define.selectall=Select All
 define.yes=Yes
+entity.account.accountDetails=Account Details
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
 entity.account.accountName=Account Name
