--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 07 19:28:21 EDT 2011
+#Fri Jul 08 18:37:11 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -135,6 +135,9 @@ admin.order.detail.shippingProvider.ratetable=Rate Table
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
+admin.order.detailcart=Cart Details
+admin.order.detailcart.basiccaartinfo=Basic Cart Info
+admin.order.detailcart.noorderitemsincart=There are no items in this cart.
 admin.order.detailorderfulfillment=Order Fulfillment Details
 admin.order.enterPaymentRefundAmount=Enter an amount to refund up to the amount that has been charged on this payment
 admin.order.exportorders=Export Orders
@@ -144,6 +147,8 @@ admin.order.list.exportDisplayedOrders=Export Displayed Orders
 admin.order.list.exportSearchResults=Export Search Results
 admin.order.list.searchresultsfound=Search Results Found
 admin.order.list.showAdvancedSearch=Advanced Search
+admin.order.listcart=List Carts
+admin.order.listcart_nav=View Carts (Unplaced Orders)
 admin.order.listorderfulfillments=Order Fulfillments List
 admin.order.orderpayment_notexists=No record of that payment was found.
 admin.order.processOrderFulfillment.notProcessable=Fulfillment cannot be processed because it has already been processed or it contains no items.
@@ -510,6 +515,7 @@ entity.optiongroup.options=Options
 entity.order.account=Customer Account
 entity.order.billingAddress=billingAddress
 entity.order.cancel_validatestatus=Order cannot be deleted due to order status ({statusValue})
+entity.order.createdDateTime=Date Created
 entity.order.orderCloseDateTime=Date Closed
 entity.order.orderNumber=Order Number
 entity.order.orderOpenDateTime=Date Placed
