Cleaned up/updated account detail

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,11 +1,12 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 08 18:37:11 EDT 2011
+#Fri Jul 08 19:49:05 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
 admin.account.delete_confirm=Are you sure that you would like to delete this account?
 admin.account.delete_nav=Delete
 admin.account.detail=Account Detail
+admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.orders=Orders
 admin.account.edit=Edit Account
 admin.account.list=Account Listing
