Fix for issue #235

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 08 19:49:05 EDT 2011
+#Mon Jul 11 11:01:46 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -389,6 +389,7 @@ entity.accountrelationship.relatedAccount=relatedAccount
 entity.accountrelationship.relationshipType=relationshipType
 entity.address.addressID=Address ID
 entity.address.city=City
+entity.address.city_validateRequired=Please enter a valid City
 entity.address.company=Company
 entity.address.country=Country
 entity.address.countryCode=Country
@@ -396,9 +397,12 @@ entity.address.locality=Locality
 entity.address.name=Name
 entity.address.phone=Phone
 entity.address.postalCode=Postal Code
+entity.address.postalCode_validateRequired=Please enter a valid Postal Code
 entity.address.stateCode=State
+entity.address.stateCode_validateRequired=Please enter a valid State
 entity.address.street2Address=Street Address 2
 entity.address.streetAddress=Street Address
+entity.address.streetAddress_validateRequired=Please enter a vaild Street Address
 entity.addresszone.addressZoneID=Address Zone ID
 entity.addresszone.addressZoneLocations=Address Zone Locations
 entity.addresszone.addressZoneName=Address Zone Name
