--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jul 11 11:01:46 PDT 2011
+#Mon Jul 11 12:04:38 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -347,8 +347,11 @@ admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 define.all=All
 define.cancel=Cancel
+define.detail=Detail
+define.general=General
 define.global=Global
 define.no=No
+define.none=None
 define.notapplicable=N/A
 define.save=Save
 define.select=Select
@@ -833,6 +836,7 @@ setting.account=Account
 setting.advanced=Advanced Settings
 setting.advanced.logDatabaseClearAfterDays=Number of days to maintain logs in Database
 setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
+setting.advanced.logMessages=Slatwall Application Logging
 setting.inherit=Inherit
 setting.order=Order
 setting.order.orderPlacedEmailBCC=New Order Placed Email BCC
