Fixed sku/option an sku listing bugs.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -651,13 +651,11 @@ entity.product.webQOH=webQOH
 entity.productImage.imageDescription=Image Description
 entity.productImage.imageName=Image Name
 entity.productImage.imageType=Image Type
-entity.productType=Product Type
-entity.productTypeDescription=Product Type Description
 entity.productrelationship.product=product
 entity.productrelationship.productRelationshipID=productRelationshipID
 entity.productrelationship.relatedProduct=relatedProduct
 entity.productrelationship.relationshipType=relationshipType
-entity.producttype.Products=Products
+entity.productType=Product Type
 entity.producttype.allowBackorderFlag=Allow Backorders
 entity.producttype.allowDropshipFlag=Allow Dropship
 entity.producttype.allowPreorderFlag=Allow Pre-Orders
@@ -665,6 +663,8 @@ entity.producttype.allowShippingFlag=Allow Shipping
 entity.producttype.callToOrderFlag=Allow Orders by Phone
 entity.producttype.delete_validateisassigned=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
 entity.producttype.parentProductType=Parent Product Type
+entity.producttype.Products=Products
+entity.producttype.productTypeDescription=Product Type Description
 entity.producttype.productTypeID=productTypeID
 entity.producttype.productTypeName=Product Type Name
 entity.producttype.subProductTypes=subProductTypes
