Full fix for issue #239

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jul 11 12:04:38 PDT 2011
+#Tue Jul 12 10:18:47 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -249,8 +249,6 @@ admin.product.selectoptions=Select Options
 admin.product.selectparentproducttype=Select
 admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
-admin.product.setting.settingSource.notApplicable=N/A
-admin.product.settingDefinedIn=Defined In
 admin.product.showbasicinfo=Show Basic Product Info
 admin.product.uploadAlternateImage=Upload Image
 admin.product.uploadAlternateImage_success=Image was added
@@ -347,9 +345,11 @@ admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 define.all=All
 define.cancel=Cancel
+define.definedin=Defined In
 define.detail=Detail
 define.general=General
 define.global=Global
+define.na=N/A
 define.no=No
 define.none=None
 define.notapplicable=N/A
@@ -651,11 +651,12 @@ entity.product.webQOH=webQOH
 entity.productImage.imageDescription=Image Description
 entity.productImage.imageName=Image Name
 entity.productImage.imageType=Image Type
+entity.productType=Product Type
 entity.productrelationship.product=product
 entity.productrelationship.productRelationshipID=productRelationshipID
 entity.productrelationship.relatedProduct=relatedProduct
 entity.productrelationship.relationshipType=relationshipType
-entity.productType=Product Type
+entity.producttype.Products=Products
 entity.producttype.allowBackorderFlag=Allow Backorders
 entity.producttype.allowDropshipFlag=Allow Dropship
 entity.producttype.allowPreorderFlag=Allow Pre-Orders
@@ -663,7 +664,6 @@ entity.producttype.allowShippingFlag=Allow Shipping
 entity.producttype.callToOrderFlag=Allow Orders by Phone
 entity.producttype.delete_validateisassigned=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
 entity.producttype.parentProductType=Parent Product Type
-entity.producttype.Products=Products
 entity.producttype.productTypeDescription=Product Type Description
 entity.producttype.productTypeID=productTypeID
 entity.producttype.productTypeName=Product Type Name
