--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -289,6 +289,7 @@ admin.setting.editpermissions=Edit Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
 admin.setting.editshippingservice=Configure Shipping Service
 admin.setting.edittaxcategory_nav=Edit
+admin.setting.edittaxcategory=Edit Tax Category
 admin.setting.fulfillmentmethod.shipping=Shipping
 admin.setting.fulfillmentmethod.shippingsettings=Shipping Settings
 admin.setting.listPaymentServices=Payment Service Listing
