Completed Feature Request in Issue #297

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 28 09:44:14 EDT 2011
+#Thu Jul 28 12:33:34 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -464,6 +464,7 @@ entity.attribute.validationMessage=Validation Message
 entity.attribute.validationRegex=Validation Regex
 entity.attribute.validationType=Validate
 entity.attributeOption.delete_success=Attribute option deleted.
+entity.attributeSet.attributeSetCode=Attribute Set Code
 entity.attributeSet.attributeSetDescription=Attribute Set Description
 entity.attributeSet.attributeSetName=Attribute Set Name
 entity.attributeSet.attributeSetType=Attribute Set Type
