Added show/hide icon for options and customizations in order list

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 28 09:44:14 EDT 2011
+#Thu Jul 28 16:21:30 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -151,6 +151,7 @@ admin.order.list.showAdvancedSearch=Advanced Search
 admin.order.listcart=List Carts
 admin.order.listcart_nav=View Carts (Unplaced Orders)
 admin.order.listorderfulfillments=Order Fulfillments List
+admin.order.orderItem.optionsandcustomizations=Options/Customizations
 admin.order.orderpayment_notexists=No record of that payment was found.
 admin.order.processOrderFulfillment.notProcessable=Fulfillment cannot be processed because it has already been processed or it contains no items.
 admin.order.processOrderPaymentRefund=Process Refund
