--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 28 16:21:30 EDT 2011
+#Sat Jul 30 23:37:07 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -212,6 +212,7 @@ admin.product.detailProductType.tabDescription=Web Description
 admin.product.detailProductType.tabSettings=Settings
 admin.product.detailproducttype=Product Type Details
 admin.product.edit=Edit Product
+admin.product.edit.addImage=Add Image
 admin.product.edit.addoption=Add Option
 admin.product.edit.addsku=Add SKU
 admin.product.edit.removesku=Remove SKU
@@ -222,6 +223,7 @@ admin.product.listproducttypes=View Product Types
 admin.product.noProductsDefined=No Products have been entered yet.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
+admin.product.previewalternateimage=Preview Image
 admin.product.productCategories.categoryPath=Category Path
 admin.product.productCategories.categoryTitle=Category
 admin.product.productCategories.isFeatured=Featured
