--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Jul 30 23:37:07 EDT 2011
+#Sun Jul 31 20:24:18 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -254,6 +254,7 @@ admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
 admin.product.showbasicinfo=Show Basic Product Info
 admin.product.uploadAlternateImage=Upload Image
+admin.product.uploadAlternateImage_fileError=At least one product image could not be added because an error ocurred uploading the file or it was not a valid image file (jpg, png, or gif).
 admin.product.uploadAlternateImage_success=Image was added
 admin.product.uploadSkuImage=Upload Image
 admin.product.uploadSkuImage_error=An error ocurred uploading the image or it was not a valid image file (jpg, png, or gif).
