Updated FW/1 to version 2.0

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Aug 05 09:01:53 EDT 2011
+#Mon Aug 08 10:33:03 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -62,7 +62,7 @@ admin.campaingLink.create=Create
 admin.help=Help
 admin.help.about=About Slatwall
 admin.main=Dashboard
-admin.main.dashboard=Dashboard
+admin.main.default=Dashboard
 admin.nav.back=Go Back
 admin.none=None
 admin.option=Product Option Manager
