Fixed address zone UI to not use REST API

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Aug 08 10:33:03 PDT 2011
+#Fri Aug 12 10:50:04 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -363,6 +363,7 @@ admin.setting.savePermissions_nav=Save
 admin.setting.saveShippingService_error=Correct the form errors indicated below and re-submit
 admin.setting.saveShippingService_success=Shipping Service Saved
 admin.setting.save_nav=Save
+admin.setting.saveaddresszone=Address Zone Saved Successfully
 admin.setting.saveaddresszone_nav=Save
 admin.setting.savefulfillmentmethod=Save
 admin.setting.savefulfillmentmethod_success=Fulfillment Method Saved
