--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Aug 12 10:50:04 PDT 2011
+#Fri Aug 12 14:38:12 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -9,7 +9,7 @@ admin.account.detail=Account Detail
 admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.orders=Orders
 admin.account.edit=Edit Account
-admin.account.list=Account Listing
+admin.account.list=List Accounts
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
 admin.account.save=Save Account
 admin.account.save_nav=Save
@@ -20,7 +20,7 @@ admin.attribute.addOption=Add Option
 admin.attribute.attributeOptionLabel=Label (optional)
 admin.attribute.attributeOptionValue=Value
 admin.attribute.closeForm=Close
-admin.attribute.create=Manage Attribute Set
+admin.attribute.create=Create New Attribute Set
 admin.attribute.createAttributeSet=Add Attribute Set
 admin.attribute.deleteAttributeOption=Delete
 admin.attribute.deleteAttributeOption_confirm=Are you sure you want to delete this Attribute Option?
@@ -43,7 +43,7 @@ admin.attribute.saveAttributeSet_success=The Attribute Set was successfully save
 admin.attribute.saveOrder=Save Order
 admin.attribute.save_success=The Attribute was successfully saved
 admin.brand=Brand Manager
-admin.brand.create=Add Brand
+admin.brand.create=Create New Brand
 admin.brand.delete=Delete Brand
 admin.brand.delete_confirm=Are you sure you want to delete this brand?
 admin.brand.delete_nav=Delete
@@ -52,13 +52,11 @@ admin.brand.detail=Brand Detail
 admin.brand.detail_hint=View the Info page of a given Brand
 admin.brand.detail_permission=View Brand Info
 admin.brand.edit=Edit Brand
-admin.brand.list=Brand Listing
+admin.brand.list=List Brands
 admin.brand.nobrandsdefined=There are currently no product brands defined.
 admin.brand.save=Save Brand
 admin.brand.save_nav=Save
 admin.brand.save_success=Brand was saved successfully
-admin.campaignLink.add=Add
-admin.campaingLink.create=Create
 admin.help=Help
 admin.help.about=About Slatwall
 admin.main=Dashboard
@@ -68,8 +66,8 @@ admin.none=None
 admin.option=Product Option Manager
 admin.option.addoption=Add Option
 admin.option.closeform=Close
-admin.option.create=Manage Option Group
-admin.option.createoptiongroup=Add Option Group
+admin.option.create=Create New Option
+admin.option.createoptiongroup=Create New Option Group
 admin.option.dashboard=Option
 admin.option.delete=Delete Option
 admin.option.delete_confirm=Are you sure you want to delete this option?
@@ -83,9 +81,9 @@ admin.option.detailoptiongroup=Option Group Details
 admin.option.edit=Manage Option Group
 admin.option.editOptionGroup=Edit Option Group
 admin.option.edittoggle.showhide=Show,Hide
-admin.option.list=Product Options
-admin.option.listbyoptiongroups=View List By Option Groups
-admin.option.listbyoptions=View List By Options
+admin.option.list=List Product Options
+admin.option.listbyoptiongroups=List Product Options By Option Groups
+admin.option.listbyoptions=List Product Options By Option
 admin.option.nooptiongroupsdefined=There are currently no product option groups defined.
 admin.option.nooptionsdefined=There are currently no product options defined.
 admin.option.nooptionsingroup=There are currently no product options in this option group
@@ -142,7 +140,7 @@ admin.order.detailcart.noorderitemsincart=There are no items in this cart.
 admin.order.detailorderfulfillment=Order Fulfillment Details
 admin.order.enterPaymentRefundAmount=Enter an amount to refund up to the amount that has been charged on this payment
 admin.order.exportorders=Export Orders
-admin.order.list=View All Orders
+admin.order.list=List Orders
 admin.order.list.actions=Actions
 admin.order.list.exportDisplayedOrders=Export Displayed Orders
 admin.order.list.exportSearchResults=Export Search Results
@@ -150,7 +148,7 @@ admin.order.list.searchresultsfound=Search Results Found
 admin.order.list.showAdvancedSearch=Advanced Search
 admin.order.listcart=List Carts
 admin.order.listcart_nav=View Carts (Unplaced Orders)
-admin.order.listorderfulfillments=Order Fulfillments List
+admin.order.listorderfulfillments=List Order Fulfillments
 admin.order.orderItem.optionsandcustomizations=Options/Customizations
 admin.order.orderpayment_notexists=No record of that payment was found.
 admin.order.processOrderFulfillment.notProcessable=Fulfillment cannot be processed because it has already been processed or it contains no items.
@@ -181,7 +179,7 @@ admin.product.create=Create New Product
 admin.product.create.disabled=Products cannot be created until the following actions are taken\:
 admin.product.create.next=Next
 admin.product.createProductType_confirm=Adding a subtype here will re-assign any products in the parent to the new subtype. Continue?
-admin.product.createproducttype=Add Product Type
+admin.product.createproducttype=Create New Product Type
 admin.product.delete=Delete Product
 admin.product.deleteImage_confirm=Are you sure you want to delete this image?
 admin.product.deleteImage_error=An error was encountered when trying to delete the image.
@@ -217,9 +215,9 @@ admin.product.edit.addoption=Add Option
 admin.product.edit.addsku=Add SKU
 admin.product.edit.removesku=Remove SKU
 admin.product.editproducttype=Edit Product Type
-admin.product.list=View All Products
+admin.product.list=List Products
 admin.product.list.inventoryNotTracked=Inventory is not tracked for this product.
-admin.product.listproducttypes=View Product Types
+admin.product.listproducttypes=List Product Types
 admin.product.noProductsDefined=No Products have been entered yet.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
@@ -261,7 +259,7 @@ admin.product.uploadSkuImage_error=An error ocurred uploading the image or it wa
 admin.product.uploadSkuImage_success=The image was successfully uploaded.
 admin.productType.settingDefinedIn=Defined In
 admin.promotion=Promotion Manager
-admin.promotion.create=Add Promotion
+admin.promotion.create=Create New Promotion
 admin.promotion.delete=Delete Promotion
 admin.promotion.deletePromotionCode=Delete Promotion Code
 admin.promotion.deletePromotionCode_confirm=Are you sure you want to delete this promotion code?
@@ -286,7 +284,7 @@ admin.promotion.edit.closeFormPromotionReward=Close
 admin.promotion.edit.removePromotionCode=Remove Promotion Code
 admin.promotion.edit.removePromotionReward=Remove Promotion Reward
 admin.promotion.edit.validatePromotionReward=Please specify promotion reward
-admin.promotion.list=Promotion Listing
+admin.promotion.list=List Promotions
 admin.promotion.nopromotionsdefined=There are currently no promotions defined.
 admin.promotion.save=Save Promotion
 admin.promotion.save_nav=Save
@@ -294,8 +292,8 @@ admin.promotion.save_success=Promotion was saved successfully
 admin.search.cleardates=Clear Dates
 admin.selectBox.select=Select
 admin.setting=Settings Manager
-admin.setting.createaddresszone=Create Address Zone
-admin.setting.createshippingmethod=Create Shipping Method
+admin.setting.createaddresszone=Create New Address Zone
+admin.setting.createshippingmethod=Create New Shipping Method
 admin.setting.dashboard=Settings Manager
 admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Payment Method?
 admin.setting.deletePaymentMethod=Delete Payment Method
@@ -331,7 +329,7 @@ admin.setting.listPaymentServices=Payment Service Listing
 admin.setting.listPaymentServices.servicedisplayname=Payment Service
 admin.setting.listPaymentServices_nav=Configure Payment Services
 admin.setting.listTaxCategories=Tax Categories
-admin.setting.listaddresszones=Address Zone Listing
+admin.setting.listaddresszones=Address Zones
 admin.setting.listaddresszones_nav=Address Zones
 admin.setting.listfulfillmentmethods=Fulfillment Methods
 admin.setting.listintegrationservices=Integration Services Listing
