Started to update the new centralized integration setup.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Aug 12 14:38:12 PDT 2011
+#Wed Aug 17 14:13:29 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -59,6 +59,8 @@ admin.brand.save_nav=Save
 admin.brand.save_success=Brand was saved successfully
 admin.help=Help
 admin.help.about=About Slatwall
+admin.integration=Integration Management
+admin.integration.list=List Integration Services
 admin.main=Dashboard
 admin.main.default=Dashboard
 admin.nav.back=Go Back
