Continued work on new integration format.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Aug 17 14:13:29 PDT 2011
+#Thu Aug 18 10:28:06 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -60,7 +60,14 @@ admin.brand.save_success=Brand was saved successfully
 admin.help=Help
 admin.help.about=About Slatwall
 admin.integration=Integration Management
+admin.integration.detail=Integration Detail
+admin.integration.detail.tab.data=Data
+admin.integration.detail.tab.payment=Payment
+admin.integration.detail.tab.shipping=Shipping
+admin.integration.edit=Edit Integration
 admin.integration.list=List Integration Services
+admin.integration.save=Save
+admin.integration.save_success=The Integration Service has been saved Successfully
 admin.main=Dashboard
 admin.main.default=Dashboard
 admin.nav.back=Go Back
@@ -534,6 +541,11 @@ entity.historysku.sku=sku
 entity.image.imageDescription=Image Description
 entity.image.imageName=Image Name
 entity.image.imageType=Image Type
+entity.integration.activeFlag=Active
+entity.integration.dataActiveFlag=Data Integration Active
+entity.integration.integrationName=Integration Name
+entity.integration.paymentActiveFlag=Payment Integration Active
+entity.integration.shippingActiveFlag=Shipping Integration Active
 entity.location.locationID=locationID
 entity.location.locationName=locationName
 entity.location.sellStockOnWeb=sellStockOnWeb
