Added the custom integration type and added any FW1 subsystem integrations to the main menu.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Aug 18 10:28:06 PDT 2011
+#Fri Aug 19 11:57:46 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -61,6 +61,7 @@ admin.help=Help
 admin.help.about=About Slatwall
 admin.integration=Integration Management
 admin.integration.detail=Integration Detail
+admin.integration.detail.tab.custom=Custom
 admin.integration.detail.tab.data=Data
 admin.integration.detail.tab.payment=Payment
 admin.integration.detail.tab.shipping=Shipping
@@ -542,6 +543,7 @@ entity.image.imageDescription=Image Description
 entity.image.imageName=Image Name
 entity.image.imageType=Image Type
 entity.integration.activeFlag=Active
+entity.integration.customActiveFlag=Custom Integration Active
 entity.integration.dataActiveFlag=Data Integration Active
 entity.integration.integrationName=Integration Name
 entity.integration.paymentActiveFlag=Payment Integration Active
