--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Aug 19 11:57:46 PDT 2011
+#Tue Aug 23 09:42:04 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -427,10 +427,10 @@ entity.accountemailaddress.accountEmailAddressID=accountEmailID
 entity.accountemailaddress.emailaddress=Email Address
 entity.accountemailaddress.emailaddressconfirm=Confirm Email Address
 entity.accountemailaddress.isPrimary=isPrimary
-entity.accountphoneNumber.account=account
-entity.accountphoneNumber.accountPhoneNumberID=accountPhoneNumberID
-entity.accountphoneNumber.accountPhoneType=accountPhoneType
-entity.accountphoneNumber.phone=phone
+entity.accountphoneNumber.account=Account
+entity.accountphoneNumber.accountPhoneNumberID=Account Phone Number ID
+entity.accountphoneNumber.accountPhoneType=Account Phone Type
+entity.accountphoneNumber.phoneNumber=Phone Number
 entity.accountrelationship.account=account
 entity.accountrelationship.accountRelationshipID=accountRelationshipID
 entity.accountrelationship.relatedAccount=relatedAccount
