Added some data deleting tools.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Aug 23 09:42:04 PDT 2011
+#Wed Aug 24 09:39:08 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -308,6 +308,10 @@ admin.setting.dashboard=Settings Manager
 admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Payment Method?
 admin.setting.deletePaymentMethod=Delete Payment Method
 admin.setting.deletePaymentMethod_nav=Delete
+admin.setting.deleteallorders=Delete All Orders
+admin.setting.deleteallorders_confirm=Are you 100% sure that you want to delete all existing orders and carts from the database
+admin.setting.deleteallproducts=Delete All Products
+admin.setting.deleteallproducts_confirm=Are you 100% Sure that you would like to delete all products along with the additional options selected?
 admin.setting.deleteshippingmethod=Delete Shipping Method
 admin.setting.deleteshippingmethod_confirm=Are you sure you want to delete this Shipping Method?
 admin.setting.deleteshippingmethod_nav=Delete
@@ -315,6 +319,7 @@ admin.setting.deleteshippingmethod_success=Shipping Method Deleted
 admin.setting.detail=Global Settings
 admin.setting.detailPaymentMethod=Payment Method Detail
 admin.setting.detailaddresszone=Address Zone Detail
+admin.setting.detaildbtools=Database Tools
 admin.setting.detailfulfillmentmethod=Fulfillment Method Detail
 admin.setting.detailintegration=Integration Setup
 admin.setting.detailpaymentservice=Payment Service Detail
